# hka-embedded-ai-tutorial

./: .gitlab-ci.yml  .gitmodules  LICENSE  README.md
cmake_example/: CMakeLists.txt  main.cpp
container_example/: Dockerfile
container_gstreamer/: Dockerfile
container_gstreamer_jetpack4/: Dockerfile
container_gstreamer_jetpack5/: Dockerfile
container_mmlab/: Dockerfile
gstreamer/cpp/: CMakeLists.txt  setup.py
gstreamer/cpp/cl/: CMakeLists.txt  gst_py.py  main.cpp
gstreamer/cpp/lib/: CMakeLists.txt  Cpp_Gstreamer.cpp  Cpp_Gstreamer.h  cpp_gstreamer.cpp  cpp_gstreamer.h
gstreamer/cpp/py_lib/: CMakeLists.txt  Py_Include.h  Py_Utilities.cpp  Py_Utilities.h  main.cpp
gstreamer/py/: py_gstreamer.py
mmlab/mmpose/: export.txt  infer_pth.py  pose-detection_yolox-pose_tensorrt_fp16_dynamic-640x640.py  pose-detection_yolox-pose_tensorrt_int8_dynamic-640x640.py  pruning.py  tensorrt_inference.py  test.txt
mmlab/mmpose/pruning/: expected_pose_output.txt  removed_backbone_stage4_output.txt
mmlab/mmyolo/: export.txt  mmyolo_no_1.py  onnx_inference.py  tensorrt_inference.py
